[project]
name = "livekit-plugins-elevenlabs"
description = "Agent Framework plugin for voice synthesis with ElevenLabs' API."
readme = "README.md"
requires-python = ">=3.9.0"
license = "Apache-2.0"
authors = [{ name = "LiveKit", email = "hello@livekit.io" }]
keywords = [
  "ai",
  "audio",
  "elevenlabs",
  "livekit",
  "realtime",
  "video",
  "voice"
]
dependencies = ["livekit-agents[codecs]>=1.4.0.rc1"]

[project.urls]
Documentation = "https://docs.livekit.io"
Source = "https://github.com/livekit/agents"
Website = "https://livekit.io/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "livekit/plugins/elevenlabs/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]
