[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "livekit-plugins-facemarket"
version = "1.0.0"
description = "FaceMarket avatar plugin for LiveKit Agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "FaceMarket" }
]
dependencies = [
  "aiohttp>=3.10,<4",
  "certifi>=2024.0.0",
  "livekit-api>=1.0.0,<2",
]
keywords = ["livekit", "avatar", "plugin", "agents", "facemarket", "ai", "realtime", "audio", "video"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://facemarket.ai/vih"

[tool.setuptools.packages.find]
where = ["."]
include = ["livekit.plugins.facemarket*"]
namespaces = true