[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-fonadalabs"
version = "1.0.0"
description = "Agent Framework plugin for FonadaLabs TTS — high-quality Indian language voices."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10.0"
authors = [{ name = "Fonada", email = "support@fonada.in" }]
keywords = ["voice", "ai", "tts", "livekit", "fonadalabs", "indian-languages", "hindi"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "livekit-agents>=1.5.0",
    "aiohttp>=3.9.0",
]

[project.urls]
Documentation = "https://docs.livekit.io"
Website = "https://fonada.in/"
Source = "https://github.com/Pragyanshu-Fonada/Fonada_Livekit_agents"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]
