[project]
name = "livekit-plugins-gladia"
description = "Agent Framework plugin for services using Gladia's API."
readme = "README.md"
requires-python = ">=3.9.0"
license = "Apache-2.0"
authors = [{ name = "LiveKit", email = "support@livekit.io" }]
keywords = [
  "ai",
  "audio",
  "gladia",
  "livekit",
  "realtime",
  "speech-to-text",
  "video",
  "voice",
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "aiohttp>=3.8.0",
  "livekit-agents[codecs]>=1.4.0.rc2",
  "numpy>=1.26",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://docs.livekit.io"
Source = "https://github.com/livekit/agents"
Website = "https://livekit.io/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "livekit/plugins/gladia/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]
