[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-gnani"
dynamic = ["version"]
description = "LiveKit Agents plugin for Gnani Vachana speech AI — STT & TTS for Indian languages"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Genvoice", email = "speechstack@gnani.ai" }]
keywords = [
    "webrtc", "realtime", "audio", "livekit", "livekit-agents",
    "gnani", "vachana", "indian-languages", "indic",
    "stt", "tts", "speech-to-text", "text-to-speech",
    "multilingual", "streaming", "websocket",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "livekit-agents[codecs]>=1.6.5",
    "websockets>=13.1,<16.0",
]

[project.urls]
Homepage = "https://gnani.ai"
Documentation = "https://docs.gnani.ai/"
Repository = "https://github.com/Gnani-AI-Mintlify/livekit-plugins-gnani"
Issues = "https://github.com/Gnani-AI-Mintlify/livekit-plugins-gnani/issues"

[tool.hatch.version]
path = "livekit/plugins/gnani/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]
